--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.h2.console.path=/h2
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
