--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 logging.file.path=src/main/resources/logs
-
+spring.mvc.hiddenmethod.filter.enabled=true
 #logging.config=src/main/resources/log4j2.properties
