feat:  add Task validator. Configure quartz and add some scheduler functional to task controller.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,39 @@
-spring.datasource.url=jdbc:h2:file:./src/main/resources/data_h2/db
+## data source configuration
+spring.datasource.jdbc-url=jdbc:h2:file:./src/main/resources/data_h2/db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
+##spring.jpa.show-sql=true
 spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+##spring.jpa.properties.hibernate.format_sql=true
+
+##logger configuration
 logging.file.path=src/main/resources/logs
+## mvc configuration
 spring.mvc.hiddenmethod.filter.enabled=true
-#logging.config=src/main/resources/log4j2.properties
+## quartz configuration
+        ##threads
+    spring.quartz.properties.org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+    spring.quartz.properties.org.quartz.threadPool.threadCount = 25
+    spring.quartz.properties.org.quartz.threadPool.threadPriority = 5
+        ##Claster
+    spring.quartz.properties.org.quartz.jobStore.isClustered=true
+    spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval=100
+        ##instrance
+    spring.quartz.properties.org.quartz.scheduler.instanceName=spring-boot-quartz
+    spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+        ##jobstore configuration
+    spring.quartz.job-store-type=jdbc
+    spring.quartz.properties.org.quartz.jobStore.class=org.springframework.scheduling.quartz.LocalDataSourceJobStore
+    spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+    spring.quartz.properties.org.quartz.jobStore.useProperties=true
+    spring.quartz.properties.org.quartz.jobStore.misfireThreshold=60000
+    spring.quartz.properties.org.quartz.jobStore.tablePrefix=qrtz_
+    spring.quartz.properties.org.quartz.jobStore.dataSource=myDS
+    spring.quartz.jdbc.initialize-schema=always
+
+
