feat:  add Task filtration and update email page. Start to write java dock

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,11 @@ spring.mvc.hiddenmethod.filter.enabled=true
     spring.quartz.properties.org.quartz.jobStore.tablePrefix=qrtz_
     spring.quartz.properties.org.quartz.jobStore.dataSource=myDS
     spring.quartz.jdbc.initialize-schema=always
-
+##mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mailmachine4@gmail.com
+spring.mail.password=7ZX-Jj5-9Nu-GCv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
